--- a/mailmerge-splitter/App.config
+++ b/mailmerge-splitter/App.config
@@ -1,6 +1,68 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <configSections>
+    <section name="log4net" type="System.Configuration.IgnoreSectionHandler"/>
+  </configSections>
+
+  <log4net>
+    <appender name="Error" type="log4net.Appender.RollingFileAppender">
+      <file value="logs/log-file-error.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%3thread] %-5level %property{user_details} (%l) - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="ERROR" />
+        <param name="LevelMax" value="ERROR" />
+      </filter>
+    </appender>
+
+    <appender name="Warning" type="log4net.Appender.RollingFileAppender">
+      <file value="logs/log-file-warn.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%3thread] %-5level %property{user_details} - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="WARN" />
+      </filter>
+    </appender>
+
+    <appender name="Info" type="log4net.Appender.RollingFileAppender">
+      <file value="logs/log-file-info.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%3thread] %-5level %property{user_details} - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="INFO" />
+      </filter>
+    </appender>
+
+    <appender name="Debug" type="log4net.Appender.RollingFileAppender">
+      <file value="logs/log-file-debug.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%3thread] %-5level %property{user_details} - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="DEBUG" />
+      </filter>
+    </appender>
+
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="Debug" />
+      <appender-ref ref="Info" />
+      <appender-ref ref="Warning" />
+      <appender-ref ref="Error" />
+    </root>
+  </log4net>
 </configuration>
