--- a/mailmerge-splitter/App.config
+++ b/mailmerge-splitter/App.config
@@ -45,6 +45,18 @@
       </filter>
     </appender>
 
+    <appender name="Debug2" type="log4net.Appender.RollingFileAppender">
+      <file value="logs/log-file-debug2.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%3thread] %-5level %property{user_details} - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="DEBUG" />
+      </filter>
+    </appender>
+
     <appender name="Debug" type="log4net.Appender.RollingFileAppender">
       <file value="logs/log-file-debug.txt" />
       <appendToFile value="true" />
@@ -59,6 +71,7 @@
 
     <root>
       <level value="DEBUG" />
+      <appender-ref ref="Debug2" /> <!-- Take this entry out and logging doesn't append propely to Debug. Possibly related - http://stackoverflow.com/questions/12646203/second-appender-in-log4net-not-working ? -->
       <appender-ref ref="Debug" />
       <appender-ref ref="Info" />
       <appender-ref ref="Warning" />
